src/Anaplan/AnaplanFormulaParser.ts
// Generated from src/Anaplan/AnaplanFormula.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { AnaplanFormulaListener } from "./AnaplanFormulaListener";
import { AnaplanFormulaVisitor } from "./AnaplanFormulaVisitor";


export class AnaplanFormulaParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly WS = 2;
	public static readonly IF = 3;
	public static readonly THEN = 4;
	public static readonly ELSE = 5;
	public static readonly BINARYOPERATOR = 6;
	public static readonly NOT = 7;
	public static readonly WORD = 8;
	public static readonly STRINGLITERAL = 9;
	public static readonly QUOTELITERAL = 10;
	public static readonly LSQUARE = 11;
	public static readonly RSQUARE = 12;
	public static readonly LPAREN = 13;
	public static readonly RPAREN = 14;
	public static readonly PLUS = 15;
	public static readonly MINUS = 16;
	public static readonly TIMES = 17;
	public static readonly DIV = 18;
	public static readonly COLON = 19;
	public static readonly EQUALS = 20;
	public static readonly NOTEQUALS = 21;
	public static readonly LT = 22;
	public static readonly GT = 23;
	public static readonly AMPERSAND = 24;
	public static readonly DOUBLEQUOTES = 25;
	public static readonly UNDERSCORE = 26;
	public static readonly QUESTIONMARK = 27;
	public static readonly HASH = 28;
	public static readonly POUND = 29;
	public static readonly PERCENT = 30;
	public static readonly DOT = 31;
	public static readonly PIPE = 32;
	public static readonly SCIENTIFIC_NUMBER = 33;
	public static readonly RULE_formula = 0;
	public static readonly RULE_expression = 1;
	public static readonly RULE_signedAtom = 2;
	public static readonly RULE_atom = 3;
	public static readonly RULE_func_ = 4;
	public static readonly RULE_dimensionmapping = 5;
	public static readonly RULE_functionname = 6;
	public static readonly RULE_entity = 7;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"formula", "expression", "signedAtom", "atom", "func_", "dimensionmapping", 
		"functionname", "entity",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "','", undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, "'['", "']'", "'('", "')'", 
		"'+'", "'-'", "'*'", "'/'", "':'", "'='", undefined, "'<'", "'>'", "'&'", 
		"'\"'", "'_'", "'?'", "'#'", "'\u00A3'", "'%'", "'.'", "'|'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, "WS", "IF", "THEN", "ELSE", "BINARYOPERATOR", "NOT", 
		"WORD", "STRINGLITERAL", "QUOTELITERAL", "LSQUARE", "RSQUARE", "LPAREN", 
		"RPAREN", "PLUS", "MINUS", "TIMES", "DIV", "COLON", "EQUALS", "NOTEQUALS", 
		"LT", "GT", "AMPERSAND", "DOUBLEQUOTES", "UNDERSCORE", "QUESTIONMARK", 
		"HASH", "POUND", "PERCENT", "DOT", "PIPE", "SCIENTIFIC_NUMBER",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(AnaplanFormulaParser._LITERAL_NAMES, AnaplanFormulaParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return AnaplanFormulaParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "AnaplanFormula.g4"; }

	// @Override
	public get ruleNames(): string[] { return AnaplanFormulaParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return AnaplanFormulaParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(AnaplanFormulaParser._ATN, this);
	}
	// @RuleVersion(0)
	public formula(): FormulaContext {
		let _localctx: FormulaContext = new FormulaContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, AnaplanFormulaParser.RULE_formula);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 16;
			this.expression(0);
			this.state = 17;
			this.match(AnaplanFormulaParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public expression(): ExpressionContext;
	public expression(_p: number): ExpressionContext;
	// @RuleVersion(0)
	public expression(_p?: number): ExpressionContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: ExpressionContext = new ExpressionContext(this._ctx, _parentState);
		let _prevctx: ExpressionContext = _localctx;
		let _startState: number = 2;
		this.enterRecursionRule(_localctx, 2, AnaplanFormulaParser.RULE_expression, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 35;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 0, this._ctx) ) {
			case 1:
				{
				_localctx = new AtomExpContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;

				this.state = 20;
				this.signedAtom();
				}
				break;

			case 2:
				{
				_localctx = new StringliteralExpContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 21;
				this.match(AnaplanFormulaParser.STRINGLITERAL);
				}
				break;

			case 3:
				{
				_localctx = new NotExpContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 22;
				this.match(AnaplanFormulaParser.NOT);
				this.state = 23;
				this.expression(8);
				}
				break;

			case 4:
				{
				_localctx = new IfExpContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 24;
				this.match(AnaplanFormulaParser.IF);
				this.state = 25;
				(_localctx as IfExpContext)._condition = this.expression(0);
				this.state = 26;
				this.match(AnaplanFormulaParser.THEN);
				this.state = 27;
				(_localctx as IfExpContext)._thenExpression = this.expression(0);
				this.state = 28;
				this.match(AnaplanFormulaParser.ELSE);
				this.state = 29;
				(_localctx as IfExpContext)._elseExpression = this.expression(2);
				}
				break;

			case 5:
				{
				_localctx = new ParenthesisExpContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 31;
				this.match(AnaplanFormulaParser.LPAREN);
				this.state = 32;
				this.expression(0);
				this.state = 33;
				this.match(AnaplanFormulaParser.RPAREN);
				}
				break;
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 54;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 2, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					this.state = 52;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
					case 1:
						{
						_localctx = new ConcatenateExpContext(new ExpressionContext(_parentctx, _parentState));
						(_localctx as ConcatenateExpContext)._left = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, AnaplanFormulaParser.RULE_expression);
						this.state = 37;
						if (!(this.precpred(this._ctx, 7))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 7)");
						}
						this.state = 38;
						this.match(AnaplanFormulaParser.AMPERSAND);
						this.state = 39;
						(_localctx as ConcatenateExpContext)._right = this.expression(8);
						}
						break;

					case 2:
						{
						_localctx = new ComparisonExpContext(new ExpressionContext(_parentctx, _parentState));
						(_localctx as ComparisonExpContext)._left = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, AnaplanFormulaParser.RULE_expression);
						this.state = 40;
						if (!(this.precpred(this._ctx, 6))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 6)");
						}
						this.state = 41;
						(_localctx as ComparisonExpContext)._op = this._input.LT(1);
						_la = this._input.LA(1);
						if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << AnaplanFormulaParser.EQUALS) | (1 << AnaplanFormulaParser.NOTEQUALS) | (1 << AnaplanFormulaParser.LT) | (1 << AnaplanFormulaParser.GT))) !== 0))) {
							(_localctx as ComparisonExpContext)._op = this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						this.state = 42;
						(_localctx as ComparisonExpContext)._right = this.expression(7);
						}
						break;

					case 3:
						{
						_localctx = new AddsubtractExpContext(new ExpressionContext(_parentctx, _parentState));
						(_localctx as AddsubtractExpContext)._left = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, AnaplanFormulaParser.RULE_expression);
						this.state = 43;
						if (!(this.precpred(this._ctx, 5))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 5)");
						}
						this.state = 44;
						(_localctx as AddsubtractExpContext)._op = this._input.LT(1);
						_la = this._input.LA(1);
						if (!(_la === AnaplanFormulaParser.PLUS || _la === AnaplanFormulaParser.MINUS)) {
							(_localctx as AddsubtractExpContext)._op = this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						this.state = 45;
						(_localctx as AddsubtractExpContext)._right = this.expression(6);
						}
						break;

					case 4:
						{
						_localctx = new MuldivExpContext(new ExpressionContext(_parentctx, _parentState));
						(_localctx as MuldivExpContext)._left = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, AnaplanFormulaParser.RULE_expression);
						this.state = 46;
						if (!(this.precpred(this._ctx, 4))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 4)");
						}
						this.state = 47;
						(_localctx as MuldivExpContext)._op = this._input.LT(1);
						_la = this._input.LA(1);
						if (!(_la === AnaplanFormulaParser.TIMES || _la === AnaplanFormulaParser.DIV)) {
							(_localctx as MuldivExpContext)._op = this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						this.state = 48;
						(_localctx as MuldivExpContext)._right = this.expression(5);
						}
						break;

					case 5:
						{
						_localctx = new BinaryoperationExpContext(new ExpressionContext(_parentctx, _parentState));
						(_localctx as BinaryoperationExpContext)._left = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, AnaplanFormulaParser.RULE_expression);
						this.state = 49;
						if (!(this.precpred(this._ctx, 3))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 3)");
						}
						this.state = 50;
						this.match(AnaplanFormulaParser.BINARYOPERATOR);
						this.state = 51;
						(_localctx as BinaryoperationExpContext)._right = this.expression(4);
						}
						break;
					}
					}
				}
				this.state = 56;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 2, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public signedAtom(): SignedAtomContext {
		let _localctx: SignedAtomContext = new SignedAtomContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, AnaplanFormulaParser.RULE_signedAtom);
		try {
			this.state = 63;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
			case 1:
				_localctx = new PlusSignedAtomContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 57;
				this.match(AnaplanFormulaParser.PLUS);
				this.state = 58;
				this.signedAtom();
				}
				break;

			case 2:
				_localctx = new MinusSignedAtomContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 59;
				this.match(AnaplanFormulaParser.MINUS);
				this.state = 60;
				this.signedAtom();
				}
				break;

			case 3:
				_localctx = new FuncAtomContext(_localctx);
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 61;
				this.func_();
				}
				break;

			case 4:
				_localctx = new AtomAtomContext(_localctx);
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 62;
				this.atom();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public atom(): AtomContext {
		let _localctx: AtomContext = new AtomContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, AnaplanFormulaParser.RULE_atom);
		try {
			this.state = 71;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case AnaplanFormulaParser.WORD:
			case AnaplanFormulaParser.QUOTELITERAL:
				_localctx = new EntityAtomContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 65;
				this.entity(0);
				}
				break;
			case AnaplanFormulaParser.LPAREN:
				_localctx = new ExpressionAtomContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 66;
				this.match(AnaplanFormulaParser.LPAREN);
				this.state = 67;
				this.expression(0);
				this.state = 68;
				this.match(AnaplanFormulaParser.RPAREN);
				}
				break;
			case AnaplanFormulaParser.SCIENTIFIC_NUMBER:
				_localctx = new NumberAtomContext(_localctx);
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 70;
				this.match(AnaplanFormulaParser.SCIENTIFIC_NUMBER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public func_(): Func_Context {
		let _localctx: Func_Context = new Func_Context(this._ctx, this.state);
		this.enterRule(_localctx, 8, AnaplanFormulaParser.RULE_func_);
		let _la: number;
		try {
			this.state = 99;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 8, this._ctx) ) {
			case 1:
				_localctx = new FuncParameterisedContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 73;
				this.functionname();
				this.state = 74;
				this.match(AnaplanFormulaParser.LPAREN);
				this.state = 83;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (((((_la - 3)) & ~0x1F) === 0 && ((1 << (_la - 3)) & ((1 << (AnaplanFormulaParser.IF - 3)) | (1 << (AnaplanFormulaParser.NOT - 3)) | (1 << (AnaplanFormulaParser.WORD - 3)) | (1 << (AnaplanFormulaParser.STRINGLITERAL - 3)) | (1 << (AnaplanFormulaParser.QUOTELITERAL - 3)) | (1 << (AnaplanFormulaParser.LPAREN - 3)) | (1 << (AnaplanFormulaParser.PLUS - 3)) | (1 << (AnaplanFormulaParser.MINUS - 3)) | (1 << (AnaplanFormulaParser.SCIENTIFIC_NUMBER - 3)))) !== 0)) {
					{
					this.state = 75;
					this.expression(0);
					this.state = 80;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la === AnaplanFormulaParser.T__0) {
						{
						{
						this.state = 76;
						this.match(AnaplanFormulaParser.T__0);
						this.state = 77;
						this.expression(0);
						}
						}
						this.state = 82;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					}
				}

				this.state = 85;
				this.match(AnaplanFormulaParser.RPAREN);
				}
				break;

			case 2:
				_localctx = new FuncSquareBracketsContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 87;
				this.entity(0);
				this.state = 88;
				this.match(AnaplanFormulaParser.LSQUARE);
				this.state = 89;
				this.dimensionmapping();
				this.state = 94;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === AnaplanFormulaParser.T__0) {
					{
					{
					this.state = 90;
					this.match(AnaplanFormulaParser.T__0);
					this.state = 91;
					this.dimensionmapping();
					}
					}
					this.state = 96;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 97;
				this.match(AnaplanFormulaParser.RSQUARE);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public dimensionmapping(): DimensionmappingContext {
		let _localctx: DimensionmappingContext = new DimensionmappingContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, AnaplanFormulaParser.RULE_dimensionmapping);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 101;
			this.match(AnaplanFormulaParser.WORD);
			this.state = 102;
			this.match(AnaplanFormulaParser.COLON);
			this.state = 103;
			this.entity(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public functionname(): FunctionnameContext {
		let _localctx: FunctionnameContext = new FunctionnameContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, AnaplanFormulaParser.RULE_functionname);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 105;
			this.match(AnaplanFormulaParser.WORD);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public entity(): EntityContext;
	public entity(_p: number): EntityContext;
	// @RuleVersion(0)
	public entity(_p?: number): EntityContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: EntityContext = new EntityContext(this._ctx, _parentState);
		let _prevctx: EntityContext = _localctx;
		let _startState: number = 14;
		this.enterRecursionRule(_localctx, 14, AnaplanFormulaParser.RULE_entity, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 114;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case AnaplanFormulaParser.QUOTELITERAL:
				{
				_localctx = new QuotedEntityContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;

				this.state = 108;
				this.match(AnaplanFormulaParser.QUOTELITERAL);
				}
				break;
			case AnaplanFormulaParser.WORD:
				{
				_localctx = new WordsEntityContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 110;
				this._errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						this.state = 109;
						this.match(AnaplanFormulaParser.WORD);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					this.state = 112;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 9, this._ctx);
				} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 121;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 11, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					{
					_localctx = new DotQualifiedEntityContext(new EntityContext(_parentctx, _parentState));
					(_localctx as DotQualifiedEntityContext)._left = _prevctx;
					this.pushNewRecursionContext(_localctx, _startState, AnaplanFormulaParser.RULE_entity);
					this.state = 116;
					if (!(this.precpred(this._ctx, 1))) {
						throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
					}
					this.state = 117;
					this.match(AnaplanFormulaParser.DOT);
					this.state = 118;
					(_localctx as DotQualifiedEntityContext)._right = this.entity(2);
					}
					}
				}
				this.state = 123;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 11, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public sempred(_localctx: RuleContext, ruleIndex: number, predIndex: number): boolean {
		switch (ruleIndex) {
		case 1:
			return this.expression_sempred(_localctx as ExpressionContext, predIndex);

		case 7:
			return this.entity_sempred(_localctx as EntityContext, predIndex);
		}
		return true;
	}
	private expression_sempred(_localctx: ExpressionContext, predIndex: number): boolean {
		switch (predIndex) {
		case 0:
			return this.precpred(this._ctx, 7);

		case 1:
			return this.precpred(this._ctx, 6);

		case 2:
			return this.precpred(this._ctx, 5);

		case 3:
			return this.precpred(this._ctx, 4);

		case 4:
			return this.precpred(this._ctx, 3);
		}
		return true;
	}
	private entity_sempred(_localctx: EntityContext, predIndex: number): boolean {
		switch (predIndex) {
		case 5:
			return this.precpred(this._ctx, 1);
		}
		return true;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!AnaplanFormulaParser.__ATN) {
			AnaplanFormulaParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(AnaplanFormulaParser._serializedATN));
		}

		return AnaplanFormulaParser.__ATN;
	}

}

export class FormulaContext extends ParserRuleContext {
	public expression(): ExpressionContext {
		return this.getRuleContext(0, ExpressionContext);
	}
	public EOF(): TerminalNode { return this.getToken(AnaplanFormulaParser.EOF, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return AnaplanFormulaParser.RULE_formula; }
	// @Override
	public enterRule(listener: AnaplanFormulaListener): void {
		if (listener.enterFormula) {
			listener.enterFormula(this);
		}
	}
	// @Override
	public exitRule(listener: AnaplanFormulaListener): void {
		if (listener.exitFormula) {
			listener.exitFormula(this);
		}
	}
	// @Override
	public accept<Result>(visitor: AnaplanFormulaVisitor<Result>): Result {
		if (visitor.visitFormula) {
			return visitor.visitFormula(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

